syntax = "proto3";

package com.chicago.dto;

import "common.proto";
import "position.proto";

option java_package = "com.chicago.dto";

message PositionRequest
{
    CrudOperation crud_operation = 1;
    Position position = 2;
}

message PositionResponse
{
    Position position = 1;
    TransactionError transaction_error = 2;
}

message PositionsRequest
{
    string organization_id = 1;
}

message PositionsResponse
{
    Positions positions = 1;
    TransactionError transaction_error = 2;
}
